# pyspell

./: LICENES  README.md  pyproject.toml
0.0.1/: pyspell-0.0.1-py3-none-any.whl
0.0.2/: pyspell-0.0.2-py3-none-any.whl
0.0.3/: pyspell-0.0.3-py3-none-any.whl
0.0.4/: pyspell-0.0.4-py3-none-any.whl
pyspell 0.0.1/: pyproject.toml
pyspell 0.0.1/src/pyspell/: __init__.py  spellcheck.py  words.txt
pyspell 0.0.1/src/pyspell.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/PolygonCollision/: __init__.py  shape.py  vector.py  velocity.py
src/PolygonCollision.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
