[project]
name = "PolygonCollision"
version = "0.0.6"
authors = [
  { name="made-up"},
]
description = "A simple python collision dectection tool"
readme = "README.md"
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vertmit/PolygonCollision"
"Bug Tracker" = "https://github.com/vertmit/PolygonCollision/issues"